<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="25dp" >

    <EditText
        android:id="@+id/vingle_net"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:hint=""
        android:includeFontPadding="false"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:textColor="@color/grey_hex_66"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        style="@style/userInfoEditText"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/vingle_net"
        android:inputType="text|textEmailAddress" />

    <View
        android:id="@+id/username_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/username"
        android:layout_marginBottom="10dp"
        android:background="@color/grey_hex_cc" />

    <EditText
        android:id="@+id/email"
        style="@style/userInfoEditText"
        android:layout_below="@id/username_divider"
        android:layout_marginLeft="8dp"
        android:hint="@string/email_address"
        android:inputType="text|textEmailAddress"
        android:singleLine="true" />

    <View
        android:id="@+id/email_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/email"
        android:layout_marginBottom="10dp"
        android:background="@color/grey_hex_cc" />

    <EditText
        android:id="@+id/password_hint"
        style="@style/userInfoEditText"
        android:layout_below="@id/email_divider"
        android:layout_marginLeft="8dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/password_at_least"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        style="@style/userInfoEditText"
        android:layout_below="@id/email_divider"
        android:layout_marginLeft="8dp"
        android:hint=""
        android:inputType="textPassword"
        android:singleLine="true" />

    <View
        android:id="@+id/password_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/password"
        android:background="@color/grey_hex_cc" />

    <LinearLayout
        android:id="@+id/facebook_checkbox_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_divider"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <CheckBox
            android:id="@+id/facebook_post_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/grey_hex_ff" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint=""
            android:includeFontPadding="false"
            android:text="@string/post_my_activity_to_gp"
            android:textColor="@color/grey_hex_33"
            android:textSize="15dp" />
    </LinearLayout>

    <Button
        android:id="@+id/fb_signup"
        style="@style/signInUpButton"
        android:layout_below="@id/facebook_checkbox_layout"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:text="@string/create_account" />

</RelativeLayout>